deployment/k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: football-api-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: football-api
    env: production
