deployment/k8s/production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: football-api-ingress
  annotations:
    kubernetes.io/tls-acme: "true" # enable certificates
    kubernetes.io/ingress.class: "nginx"
spec:
  tls: # specify domains to fetch certificates for
  - hosts:
    - football-api.g.sportal365.com
    secretName: football-api-tls
  rules:
  - host: football-api.g.sportal365.com
    http:
      paths:
      - path: /
        backend:
          serviceName: football-api-svc
          servicePort: 80
